--- a/src/views/entradas.ejs
+++ b/src/views/entradas.ejs
@@ -40,138 +40,74 @@
     </section>
 
     <div class="dishes">
-
         <div class="line-dishes">
-
             <div class="dish">
-
-                <div class="star">
-                    <div class="star-image"></div>
-                </div>
-
+                <div class="star"><div class="star-image"></div></div>
                 <img src="/img/Causa-Limeña.jpg" alt="">
-
                 <div class="description-dishes">
                     <p>S/5.00</p>
-
                     <h2>Causa Limeña</h2>
-
+                    <p class="short-description">Deliciosa causa rellena con pollo y mayonesa, acompañada de aguacate.</p>
                     <button> Pedir Ahora </button>
                 </div>
             </div>
-
             <div class="dish">
-
-                <div class="star">
-                    <div class="star-image"></div>
-                </div>
-
+                <div class="star"><div class="star-image"></div></div>
                 <img src="/img/ensalada-rusa.jpg" alt="">
-
-
                 <div class="description-dishes">
                     <p>S/3.00</p>
-
                     <h2>Ensalada Rusa</h2>
-
+                    <p class="short-description">Ensalada fresca con papas, zanahorias, guisantes y mayonesa.</p>
                     <button> Pedir Ahora </button>
                 </div>
-
-
             </div>
-
-
         </div>
-
-
         <div class="line-dishes">
-
             <div class="dish">
-
-                <div class="star">
-                    <div class="star-image"></div>
-                </div>
-
+                <div class="star"><div class="star-image"></div></div>
                 <img src="/img/humitas.jpg" alt="">
-
                 <div class="description-dishes">
                     <p>S/4.00</p>
-
                     <h2>Humitas</h2>
-
+                    <p class="short-description">Masa de maíz rellena con queso y envuelta en hojas de choclo.</p>
                     <button> Pedir Ahora </button>
                 </div>
-
             </div>
-
             <div class="dish">
-
-                <div class="star">
-                    <div class="star-image"></div>
-                </div>
-
+                <div class="star"><div class="star-image"></div></div>
                 <img src="/img/papa_huancaina.jpg" alt="">
-
                 <div class="description-dishes">
                     <p>S/6.00</p>
-
-                    <h2>Papa a la huancaina</h2>
-
+                    <h2>Papa a la Huancaína</h2>
+                    <p class="short-description">Papas bañadas en una deliciosa salsa de ají amarillo y queso.</p>
                     <button> Pedir Ahora </button>
                 </div>
-
-
             </div>
-
-
         </div>
-
-
         <div class="line-dishes">
-
             <div class="dish">
-
-                <div class="star">
-                    <div class="star-image"></div>
-                </div>
-
+                <div class="star"><div class="star-image"></div></div>
                 <img src="/img/tamales.jpg" alt="">
-
                 <div class="description-dishes">
                     <p>S/5.00</p>
-
                     <h2>Tamales</h2>
-
+                    <p class="short-description">Masa de maíz rellena con carne y envuelta en hojas de plátano.</p>
                     <button> Pedir Ahora </button>
-
                 </div>
-
             </div>
-
             <div class="dish">
-
-                <div class="star">
-                    <div class="star-image"></div>
-                </div>
-
+                <div class="star"><div class="star-image"></div></div>
                 <img src="/img/papa_ocopa.jpg" alt="">
-
                 <div class="description-dishes">
                     <p>S/6.00</p>
-
-                    <h2>Papa a la ocopa</h2>
-
+                    <h2>Papa a la Ocopa</h2>
+                    <p class="short-description">Papas cubiertas con una cremosa salsa de huacatay y maní.</p>
                     <button> Pedir Ahora </button>
                 </div>
-
             </div>
-
-
         </div>
-
-
     </div>
-
+    
 
     <div class="footer2">
 
@@ -190,6 +126,7 @@
         </a>
   
     </div>
+    <%- include('partials/bot') %>
     <%- include('partials/footer') %>
   
 </body>
