--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/navigation.css">
 <header>
   <nav class="navbar navbar-expand-lg custom-navbar">
@@ -24,12 +25,12 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">
+            <a class="nav-link "  href="/">
               <i class="bi bi-house-door-fill"></i>Inicio
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/menu"> <i class="bi bi-menu-down"></i>Menu</a>
+            <a class="nav-link "  href="/menu"> <i class="bi bi-menu-down"></i>Menu</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -48,8 +49,13 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> <i class="bi bi-bookmark-star-fill"></i> Promociones</a>
+            <a class="nav-link" href="/promociones"> <i class="bi bi-bookmark-star-fill"></i> Promociones</a>
           </li>
+          <!--
+          <li class="nav-item">
+            <a class="nav-link" href="/about"> <i class="bi bi-award-fill"></i> Sobre Nosotros</a>
+          </li>
+          -->
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
