--- a/src/views/platos.ejs
+++ b/src/views/platos.ejs
@@ -40,138 +40,102 @@
     </section>
 
     <div class="dishes">
-
         <div class="line-dishes">
-
             <div class="dish">
-
                 <div class="star">
                     <div class="star-image"></div>
                 </div>
-
-                <img src="/img/lomo-saltado.png" alt="">
-
+    
+                <img src="/img/lomo-saltado.png" alt="Lomo Saltado" />
+    
                 <div class="description-dishes">
                     <p>S/20.00</p>
-
                     <h2>Lomo Saltado</h2>
-
-                    <button> Pedir Ahora </button>
+                    <p class="short-description">Delicioso plato con trozos de lomo de res, cebolla, tomate, papas fritas y arroz, todo salteado al wok.</p>
+                    <button>Pedir Ahora</button>
                 </div>
             </div>
-
+    
             <div class="dish">
-
                 <div class="star">
                     <div class="star-image"></div>
                 </div>
-
-                <img src="/img/aji-gallina.png" alt="">
-
-
+    
+                <img src="/img/aji-gallina.png" alt="Aji de Gallina" />
+    
                 <div class="description-dishes">
                     <p>S/15.00</p>
-
-                    <h2>Aji de gallina</h2>
-
-                    <button> Pedir Ahora </button>
+                    <h2>Aji de Gallina</h2>
+                    <p class="short-description">Pollo desmenuzado en una suave y cremosa salsa de ají amarillo, acompañado de arroz blanco.</p>
+                    <button>Pedir Ahora</button>
                 </div>
-
-
             </div>
-
-
         </div>
-
-
+    
         <div class="line-dishes">
-
             <div class="dish">
-
                 <div class="star">
                     <div class="star-image"></div>
                 </div>
-
-                <img src="/img/arroz-pollo.png" alt="">
-
+    
+                <img src="/img/arroz-pollo.png" alt="Arroz con Pollo" />
+    
                 <div class="description-dishes">
                     <p>S/15.00</p>
-
-                    <h2>Arroz con pollo</h2>
-
-                    <button> Pedir Ahora </button>
+                    <h2>Arroz con Pollo</h2>
+                    <p class="short-description">Un clásico de la gastronomía peruana: arroz con pollo sazonado con cilantro.</p>
+                    <button>Pedir Ahora</button>
                 </div>
-
             </div>
-
+    
             <div class="dish">
-
                 <div class="star">
                     <div class="star-image"></div>
                 </div>
-
-                <img src="/img/carapulcra.png" alt="">
-
+    
+                <img src="/img/carapulcra.png" alt="Carapulcra" />
+    
                 <div class="description-dishes">
                     <p>S/20.00</p>
-
                     <h2>Carapulcra</h2>
-
-                    <button> Pedir Ahora </button>
+                    <p class="short-description">Guiso a base de papa seca, cerdo y especias, con un toque de ají panca. ¡Un sabor único!</p>
+                    <button>Pedir Ahora</button>
                 </div>
-
-
             </div>
-
-
         </div>
-
-
+    
         <div class="line-dishes">
-
             <div class="dish">
-
                 <div class="star">
                     <div class="star-image"></div>
                 </div>
-
-                <img src="/img/cau-cau.png" alt="">
-
+    
+                <img src="/img/cau-cau.png" alt="Cau Cau" />
+    
                 <div class="description-dishes">
                     <p>S/15.00</p>
-
                     <h2>Cau Cau</h2>
-
-                    <button> Pedir Ahora </button>
-
+                    <p class="short-description">Plato tradicional peruano con mondongo, papas y una salsa amarilla especiada con ají amarillo.</p>
+                    <button>Pedir Ahora</button>
                 </div>
-
             </div>
-
+    
             <div class="dish">
-
                 <div class="star">
                     <div class="star-image"></div>
                 </div>
-
-                <img src="/img/rocoto-relleno.png" alt="">
-
+    
+                <img src="/img/rocoto-relleno.png" alt="Rocoto Relleno" />
+    
                 <div class="description-dishes">
                     <p>S/25.00</p>
-
-                    <h2>Rocoto relleno</h2>
-
-                    <button> Pedir Ahora </button>
+                    <h2>Rocoto Relleno</h2>
+                    <p class="short-description">Rocoto picante relleno con carne molida, cebolla y queso, luego horneado hasta dorarse.</p>
+                    <button>Pedir Ahora</button>
                 </div>
-
             </div>
-
-
         </div>
-
-
     </div>
-
 
     <div class="footer2">
 
@@ -190,6 +154,7 @@
         </a>
   
     </div>
+    <%- include('partials/bot') %>
     <%- include('partials/footer') %>
 
 </body>
