--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,3 +1,18 @@
+.card {
+  border-radius: 15px; /* Bordes redondeados */
+  overflow: hidden; /* Asegura que todo esté dentro del borde redondeado */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); /* Sombra suave */
+  transition: transform 0.5s ease, box-shadow 0.5s ease; /* Animación suave al hacer hover */
+}
+.card:hover {
+  transform: translateY(-8px); /* Levantar ligeramente la tarjeta al pasar el ratón */
+  box-shadow: 0 8px 22px rgba(0, 0, 0, 0.35); /* Sombra más intensa al hacer hover */
+}
+
+.card .card-img-top {
+  border-bottom: 6px solid #ff8623; /* Línea debajo de la imagen para separación */
+  transition: transform 0.3s ease; /* Animación suave en la imagen */
+}
 .custom-carousel-bg {
   background-color: #f8bb89;
   margin-top: 0px;
@@ -26,6 +41,26 @@
   border-radius: 9%;
 }
 
+.card-body .card-title {
+  font-style: bold;
+  font-size: 20px;
+}
+
+
+.btn-primary {
+  background-color: #ff6333;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-style: bold;
+}
+.card .card-text {
+  text-align: justify; /* Justifica el texto */
+}
+.btn-primary:hover {
+  background-color: #ff5521;
+}
 /* Carousel control buttons */
 .custom-carousel-control {
   background-color: black;
