--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%- include('partials/head') %>
 
-   <link rel="stylesheet" href="/index.css">
-   <title><%= title %></title>
+    <link rel="stylesheet" href="/index.css" />
+    <title><%= title %></title>
   </head>
   <body>
     <%- include('partials/navigation') %>
@@ -40,31 +40,37 @@
         </div>
         <div class="carousel-inner custom-carousel-inner">
           <div class="carousel-item active">
-            <img
-              src="img/lomoPresentation.jpg"
-              class="d-block w-100 custom-carousel-img"
-              alt="Primera Imagen Platos"
-            />
+            <a href="/platos">
+              <img
+                src="img/lomoPresentation.jpg"
+                class="d-block w-100 custom-carousel-img"
+                alt="Primera Imagen Platos"
+              />
+            </a>
             <div class="carousel-caption d-none d-md-block">
               <h5 class="custom-carousel-caption">Platos Criollos Buenazos</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              src="img/causaPresentation.jpg"
-              class="d-block w-100 custom-carousel-img"
-              alt="Segunda Imagen"
-            />
+            <a href="/entradas">
+              <img
+                src="img/causaPresentation.jpg"
+                class="d-block w-100 custom-carousel-img"
+                alt="Segunda Imagen"
+              />
+            </a>
             <div class="carousel-caption d-none d-md-block">
               <h5 class="custom-carousel-caption">Entradas</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              src="img/PiscosourPresentation.jpg"
-              class="d-block w-100 custom-carousel-img"
-              alt="Tercera Imagen"
-            />
+            <a href="bebidas">
+              <img
+                src="img/PiscosourPresentation.jpg"
+                class="d-block w-100 custom-carousel-img"
+                alt="Tercera Imagen"
+              />
+            </a>
             <div class="carousel-caption d-none d-md-block">
               <h5 class="custom-carousel-caption">Bebidas</h5>
             </div>
@@ -95,83 +101,94 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="container my-5">
-        <div class="row g-3 d-flex align-items-stretch">
-          <div class="col-md-4">
-            <div class="card h-100">
-              <img
-                src="img/criollocard.jpg"
-                class="card-img-top custom-card-img"
-                alt="Imagen 1"
-              />
-              <div class="card-body d-flex flex-column justify-content-center">
-                <h5 class="card-title text-center">Platos Criollos</h5>
-                <p class="card-text text-justify">
-                  En El Peruanito, te invitamos a disfrutar de los auténticos
-                  sabores de la cocina criolla peruana. Platos tradicionales
-                  preparados con amor y los mejores ingredientes que te harán
-                  sentir como en casa.
-                </p>
-                <a href="/platos" class="btn btn-primary">Ver más</a>
-              </div>
+    </section>
+
+    <div class="container my-5">
+      <div class="row g-3 d-flex align-items-stretch">
+        <div class="col-md-4">
+          
+          <div class="card h-100">
+            <a href="/platos">
+            <img
+              src="img/criollocard.jpg"
+              class="card-img-top custom-card-img"
+              alt="Imagen 1"
+            />
+          </a>
+            <div class="card-body d-flex flex-column justify-content-center">
+            
+              <h5 class="card-title text-center">Platos Criollos</h5>
+              <p class="card-text text-justify">
+                En El Peruanito, te invitamos a disfrutar de los auténticos
+                sabores de la cocina criolla peruana. Platos tradicionales
+                preparados con amor y los mejores ingredientes que te harán
+                sentir como en casa.
+              </p>
+              <a href="/platos" class="btn btn-primary">Ver más</a>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card h-100">
-              <img
-                src="img/entradacard.jpg"
-                class="card-img-top custom-card-img"
-                alt="Imagen 2"
-              />
-              <div class="card-body d-flex flex-column justify-content-center">
-                <h5 class="card-title text-center">Entradas</h5>
-                <p class="card-text text-justify">
-                  Descubre nuestras deliciosas entradas, perfectas para abrir el
-                  apetito. Desde causas limeñas hasta anticuchos llenos de sabor,
-                  cada bocado es un homenaje a la tradición peruana.
-                </p>
-                <a href="/entradas" class="btn btn-primary">Ver más</a>
-              </div>
+        
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <a href="/entradas">
+            <img
+              src="img/entradacard.jpg"
+              class="card-img-top custom-card-img"
+              alt="Imagen 2"
+            />
+          </a>
+            <div class="card-body d-flex flex-column justify-content-center">
+              <h5 class="card-title text-center">Entradas</h5>
+              <p class="card-text text-justify">
+                Descubre nuestras deliciosas entradas, perfectas para abrir el
+                apetito. Desde causas limeñas hasta anticuchos llenos de sabor,
+                cada bocado es un homenaje a la tradición peruana.
+              </p>
+              <a href="/entradas" class="btn btn-primary">Ver más</a>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card h-100">
-              <img
-                src="img/bebidascard.jpg"
-                class="card-img-top custom-card-img"
-                alt="Imagen 3"
-              />
-              <div class="card-body d-flex flex-column justify-content-center">
-                <h5 class="card-title text-center">Bebidas</h5>
-                <p class="card-text text-justify">
-                  Acompaña tu comida con nuestras bebidas únicas y refrescantes,
-                  como el clásico Pisco Sour o una chicha morada hecha al estilo
-                  tradicional. ¡Un verdadero placer para el paladar!
-                </p>
-                <a href="/bebidas" class="btn btn-primary">Ver más</a>
-              </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+
+            <a href="/bebidas">
+            <img
+              src="img/bebidascard.jpg"
+              class="card-img-top custom-card-img"
+              alt="Imagen 3"
+            />
+          </a>
+            <div class="card-body d-flex flex-column justify-content-center">
+              <h5 class="card-title text-center">Bebidas</h5>
+              <p class="card-text text-justify">
+                Acompaña tu comida con nuestras bebidas únicas y refrescantes,
+                como el clásico Pisco Sour o una chicha morada hecha al estilo
+                tradicional. ¡Un verdadero placer para el paladar!
+              </p>
+              <a href="/bebidas" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+
     <div class="footer2">
-
       <a href="#" class="icono2">
-          <i class="fas fa-home"></i>
+        <i class="fas fa-home"></i>
       </a>
       <a href="#" class="icono2">
-          <i class="fas fa-search"></i>
+        <i class="fas fa-search"></i>
       </a>
       <a href="#" class="icono2">
-          <i class="fas fa-shopping-cart"></i>
-          <span class="badge">3</span>
+        <i class="fas fa-shopping-cart"></i>
+        <span class="badge">3</span>
       </a>
       <a href="#" class="icono2">
-          <i class="fas fa-user"></i>
+        <i class="fas fa-user"></i>
       </a>
-
-  </div>
+    </div>
+    <%- include('partials/bot') %>
 
     <%- include('partials/footer') %>
   </body>
