--- a/src/views/menu.ejs
+++ b/src/views/menu.ejs
@@ -10,14 +10,19 @@
   <body>
     <%- include('partials/navigation') %>
     <div class="container">
-      <div class="custom-row mb-2">
-        <a href="/">
-          <div class="circle">
-            <img class="arrow" src="/img/arrow2.png" alt="Arrow" />
+        <div class="custom-row mb-2">
+          <a href="/">
+            <div class="circle">
+              <img class="arrow" src="/img/arrow2.png" alt="Arrow" />
+            </div>
+          </a>
+          <h2 class="mb-0">Menu 
+            
+          </h2>
+          <div class="logo-container">
+            <img src="img/logopng.png" alt="Logo" />
           </div>
-        </a>
-        <h2 class="mb-0">Menu</h2>
-        <img src="img/logopng.png" alt="Logo" />
+        </div>
       </div>
 
       <div class="container mt-4">
